--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 									<li><a href="https://en.wikipedia.org/wiki/Application_programming_interface">API</a></li>
 								</ul>
 							</li>
-							<li class="btn-cta"><a href="index.php"><span>Login</span></a></li>
+							<li class="btn-cta"><a href="https://node-red-xebbb.eu-gb.mybluemix.net/ui/#!/0?socketid=eujTRrLOJoBNegpMAAAH"><span>Login</span></a></li>
 							<li class="btn-cta"><a href="https://node-red-xebbb.eu-gb.mybluemix.net/ui/#!/0?socketid=eujTRrLOJoBNegpMAAAH"><span>New User </span></a></li>
 						</ul>
 					</div>
